--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+	<script src="lib/localforage/dist/localforage.js"></script>
+	<script src="lib/angular-localforage/dist/angular-localForage.js"></script>
+	
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
