--- a/www/index.html
+++ b/www/index.html
@@ -65,10 +65,10 @@
               </button>
             </ion-nav-buttons>
 
-            <ion-nav-buttons side="right">
+            <!--<ion-nav-buttons side="right">
               <button class="button button-icon button-clear ion-ios7-gear" ng-click="showRightMenu()">
               </button>
-            </ion-nav-buttons>
+            </ion-nav-buttons>-->
           </ion-nav-bar>
           <ion-nav-view animation="slide-left-right"></ion-nav-view>
         </ion-side-menu-content> 
@@ -97,7 +97,7 @@
       
         <ion-side-menu side="right">
           <ion-header-bar class="bar bar-header bar-dark">
-            <h1 class="title">Right Menu</h1>
+            <h1 class="title">Opciones</h1>
           </ion-header-bar>
           <ion-content>
             <ion-list>
