--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@
     -->
 	<ion-side-menus ng-controller="MainCtrl">
         
-        <ion-side-menu-content ng-controller="NavCtrl">
+        <ion-side-menu-content ng-controller="NavCtrl" drag-content="false">
           <ion-nav-bar class="bar-positive">
             <ion-nav-back-button class="button-icon ion-arrow-left-c">
             </ion-nav-back-button>
