--- a/www/index.html
+++ b/www/index.html
@@ -60,10 +60,10 @@
             <ion-nav-back-button class="button-icon ion-arrow-left-c">
             </ion-nav-back-button>
           
-            <ion-nav-buttons side="left">
+            <!--<ion-nav-buttons side="left">
               <button class="button button-icon button-clear ion-navicon" ng-click="showMenu()">
               </button>
-            </ion-nav-buttons>
+            </ion-nav-buttons>-->
 
             <!--<ion-nav-buttons side="right">
               <button class="button button-icon button-clear ion-ios7-gear" ng-click="showRightMenu()">
