--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
       }
     </script>-->
 
+	<link href="lib/ion-floating-menu/dist/ion-floating-menu.css" rel="stylesheet" type="text/css"/>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -33,6 +34,7 @@
 
 	<script src="lib/localforage/dist/localforage.js"></script>
 	<script src="lib/angular-localforage/dist/angular-localForage.js"></script>
+	<script src="lib/ion-floating-menu/dist/ion-floating-menu.js" type="text/javascript"></script>
 	
     <!-- your app's js -->
     <script src="js/app.js"></script>
